# ez-mail

./: .gitignore  pyproject.toml
core/core/: settings.py
core/ezmail/: apps.py  serializers.py  views.py
ezmail/: manage.py
ezmail/api/: urls.py
ezmail/core/: models.py  serializers.py  views.py
ezmail/core/migrations/: 0001_initial.py
ezmail/ezmail/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: app.jsx  main.jsx
